--- a/kwitter_page.html
+++ b/kwitter_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kwitter Room</title>
+	<title>Kwitter Message page</title>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
@@ -14,12 +14,13 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 <body>
-<div class="container">
-<button id="logout" class="glyphicon glyphicon-log-out btn btn-danger" onclick="logout()">Logout</button>
 
+<div class="container">
+	<button id="logout" onclick="logout()" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
+	<button id="back" class="glyphicon glyphicon-triangle-left btn btn-success" onclick="back()">Back</button>
+	
 	<center>
 		<h1 class="header">	
 			Kwitter	
@@ -27,17 +28,18 @@
 				<img src="m2.png">
 			</sup>
 		</h1>
-		<h2 class="color_white" id="user_name"></h2>
-		<div class="form-group input_div_room_page">
-			<label>#Add Room:</label>
-		<input type="text" id="room_name" class="form-control" style="color: black ;" placeholder="#room name">
-
-		</div>
-		<button class="btn btn-success" onclick="addroom()">#Add Room</button>
-		<h2 class="color_white">#TrendingRooms</h2>
-	<div id="output"></div>
+		<div id="output" style="text-align: left;margin-bottom: 70px;"> </div>
 	</center>
 </div>
-<script src="kwitter_room.js"></script>
+
+<center>
+	<div class="input_div_message_page">
+		<label>Send:</label>
+		<input type="text" id="msg" class="form-control" placeholder="message">
+		<button class="btn btn-success" onclick="send()">Send</button>
+	</div>
+</center>
+
+<script src="kwitter_page.js"></script>
 </body>
 </html>
